src/main/java/de/hpi/data_change/imdb/generated/actors/ActorsParser.java
// Generated from C:/Users/Leon.Bornemann/IdeaProjects/IMDBParser/resources/grammars\Actors.g4 by ANTLR 4.7
package de.hpi.data_change.imdb.generated.actors;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ActorsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEP=1, STARTSIGNAL=2, ENDSIGNAL=3, NEWLINE=4, ANYTHING=5;
	public static final int
		RULE_r = 0, RULE_anythingButStart = 1, RULE_anyline = 2, RULE_anyLineOrEOF = 3, 
		RULE_actorList = 4, RULE_actorAndWork = 5, RULE_actorName = 6, RULE_workList = 7, 
		RULE_workElement = 8;
	public static final String[] ruleNames = {
		"r", "anythingButStart", "anyline", "anyLineOrEOF", "actorList", "actorAndWork", 
		"actorName", "workList", "workElement"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SEP", "STARTSIGNAL", "ENDSIGNAL", "NEWLINE", "ANYTHING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Actors.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ActorsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public AnythingButStartContext anythingButStart() {
			return getRuleContext(AnythingButStartContext.class,0);
		}
		public TerminalNode STARTSIGNAL() { return getToken(ActorsParser.STARTSIGNAL, 0); }
		public ActorListContext actorList() {
			return getRuleContext(ActorListContext.class,0);
		}
		public TerminalNode ENDSIGNAL() { return getToken(ActorsParser.ENDSIGNAL, 0); }
		public AnyLineOrEOFContext anyLineOrEOF() {
			return getRuleContext(AnyLineOrEOFContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			anythingButStart();
			setState(19);
			match(STARTSIGNAL);
			System.out.println("Starting actor/actress List parsing");
			setState(21);
			actorList();
			System.out.println("Finished actor/actress List parsing");
			setState(23);
			match(ENDSIGNAL);
			setState(24);
			anyLineOrEOF();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnythingButStartContext extends ParserRuleContext {
		public List<AnylineContext> anyline() {
			return getRuleContexts(AnylineContext.class);
		}
		public AnylineContext anyline(int i) {
			return getRuleContext(AnylineContext.class,i);
		}
		public List<TerminalNode> ENDSIGNAL() { return getTokens(ActorsParser.ENDSIGNAL); }
		public TerminalNode ENDSIGNAL(int i) {
			return getToken(ActorsParser.ENDSIGNAL, i);
		}
		public AnythingButStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anythingButStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterAnythingButStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitAnythingButStart(this);
		}
	}

	public final AnythingButStartContext anythingButStart() throws RecognitionException {
		AnythingButStartContext _localctx = new AnythingButStartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anythingButStart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SEP) | (1L << ENDSIGNAL) | (1L << NEWLINE) | (1L << ANYTHING))) != 0)) {
				{
				setState(28);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SEP:
				case NEWLINE:
				case ANYTHING:
					{
					setState(26);
					anyline();
					}
					break;
				case ENDSIGNAL:
					{
					setState(27);
					match(ENDSIGNAL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			System.out.println("Matched Anything but start");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnylineContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ActorsParser.NEWLINE, 0); }
		public List<TerminalNode> ANYTHING() { return getTokens(ActorsParser.ANYTHING); }
		public TerminalNode ANYTHING(int i) {
			return getToken(ActorsParser.ANYTHING, i);
		}
		public List<TerminalNode> SEP() { return getTokens(ActorsParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(ActorsParser.SEP, i);
		}
		public AnylineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterAnyline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitAnyline(this);
		}
	}

	public final AnylineContext anyline() throws RecognitionException {
		AnylineContext _localctx = new AnylineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_anyline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP || _la==ANYTHING) {
				{
				{
				setState(35);
				_la = _input.LA(1);
				if ( !(_la==SEP || _la==ANYTHING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyLineOrEOFContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ActorsParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(ActorsParser.EOF, 0); }
		public List<TerminalNode> ANYTHING() { return getTokens(ActorsParser.ANYTHING); }
		public TerminalNode ANYTHING(int i) {
			return getToken(ActorsParser.ANYTHING, i);
		}
		public List<TerminalNode> SEP() { return getTokens(ActorsParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(ActorsParser.SEP, i);
		}
		public AnyLineOrEOFContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyLineOrEOF; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterAnyLineOrEOF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitAnyLineOrEOF(this);
		}
	}

	public final AnyLineOrEOFContext anyLineOrEOF() throws RecognitionException {
		AnyLineOrEOFContext _localctx = new AnyLineOrEOFContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_anyLineOrEOF);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP || _la==ANYTHING) {
				{
				{
				setState(43);
				_la = _input.LA(1);
				if ( !(_la==SEP || _la==ANYTHING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NEWLINE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorListContext extends ParserRuleContext {
		public List<ActorAndWorkContext> actorAndWork() {
			return getRuleContexts(ActorAndWorkContext.class);
		}
		public ActorAndWorkContext actorAndWork(int i) {
			return getRuleContext(ActorAndWorkContext.class,i);
		}
		public ActorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterActorList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitActorList(this);
		}
	}

	public final ActorListContext actorList() throws RecognitionException {
		ActorListContext _localctx = new ActorListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_actorList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANYTHING) {
				{
				{
				setState(51);
				actorAndWork();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorAndWorkContext extends ParserRuleContext {
		public ActorNameContext actorName() {
			return getRuleContext(ActorNameContext.class,0);
		}
		public TerminalNode SEP() { return getToken(ActorsParser.SEP, 0); }
		public WorkListContext workList() {
			return getRuleContext(WorkListContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ActorsParser.NEWLINE, 0); }
		public ActorAndWorkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorAndWork; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterActorAndWork(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitActorAndWork(this);
		}
	}

	public final ActorAndWorkContext actorAndWork() throws RecognitionException {
		ActorAndWorkContext _localctx = new ActorAndWorkContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_actorAndWork);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			actorName();
			setState(58);
			match(SEP);
			setState(59);
			workList();
			setState(60);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorNameContext extends ParserRuleContext {
		public TerminalNode ANYTHING() { return getToken(ActorsParser.ANYTHING, 0); }
		public ActorNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterActorName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitActorName(this);
		}
	}

	public final ActorNameContext actorName() throws RecognitionException {
		ActorNameContext _localctx = new ActorNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_actorName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(ANYTHING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WorkListContext extends ParserRuleContext {
		public List<WorkElementContext> workElement() {
			return getRuleContexts(WorkElementContext.class);
		}
		public WorkElementContext workElement(int i) {
			return getRuleContext(WorkElementContext.class,i);
		}
		public WorkListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_workList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterWorkList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitWorkList(this);
		}
	}

	public final WorkListContext workList() throws RecognitionException {
		WorkListContext _localctx = new WorkListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_workList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				workElement();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SEP || _la==ANYTHING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WorkElementContext extends ParserRuleContext {
		public TerminalNode ANYTHING() { return getToken(ActorsParser.ANYTHING, 0); }
		public TerminalNode NEWLINE() { return getToken(ActorsParser.NEWLINE, 0); }
		public TerminalNode SEP() { return getToken(ActorsParser.SEP, 0); }
		public WorkElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_workElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).enterWorkElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ActorsListener ) ((ActorsListener)listener).exitWorkElement(this);
		}
	}

	public final WorkElementContext workElement() throws RecognitionException {
		WorkElementContext _localctx = new WorkElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_workElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEP) {
				{
				setState(69);
				match(SEP);
				}
			}

			setState(72);
			match(ANYTHING);
			setState(73);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}